# crabot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: mcp.ron  models.json  models.ron  preamble.md  tools.ron  workmode.md
assets/rules/: rust.md  web.md
examples/: session_stats.rs
src/: adk.rs  chat.rs  fonts.rs  lib.rs  llm.rs  main.rs  model.rs  model_database.rs  search.rs  session.rs  settings.rs  setup.rs  system.rs  tool.rs  user.rs  workspace.rs
src/tools/: ask.rs  bash.rs  custom.rs  edit.rs  fetch.rs  find.rs  glob.rs  grep.rs  mcp.rs  mod.rs  read.rs  search.rs  todo.rs  write.rs
src/views/: builtin_tools.rs  center_pane.rs  icons.rs  left_pane.rs  mod.rs  modal.rs  model_config.rs  right_pane.rs  search_bar.rs  session_list.rs  session_state.rs  session_view.rs  settings.rs  styles.rs  system_prompt.rs  theme.rs  tool_list.rs  tool_message.rs  update.rs  user_prompt.rs
src/views/settings/: ai_models.rs  custom_tools.rs  mcp_servers.rs  mod.rs  tool_playground.rs
src/widgets/: dropdown.rs  mod.rs  textarea.rs
