[package]
name = "crabot"
version = "0.1.0"
edition = "2024"
description = "A smart and powerful coding agent with native GUI."
license = "Apache-2.0"
repository = "https://github.com/J-F-Liu/crabot"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
rfd = "0.15"
home = "0.5"
genai = "0.6"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
iced = { version = "0.14.0", features = ["advanced", "tokio", "markdown"] }
iced_runtime = "0.14.0"
iced_selection = "0.5.0"
indexmap = "2.14.0"
regex = "1.12.4"
glob = "0.3.3"

ignore = "0.4.26"
crabtime = "1.1.4"
dunce = "1"
gh-emoji = "1.0.8"
json-escape = "0.3"
