[package]
name = "crabot"
version = "0.4.1"
edition = "2024"
description = "A smart and powerful coding agent with native GUI."
license = "MIT"
repository = "https://github.com/J-F-Liu/crabot"

[profile.release]
opt-level = "s"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
rfd = "0.17"
home = "0.5"
genai = "0.6"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
iced = { version = "0.14.0", features = [
    "advanced",
    "tokio",
    "highlighter",
    "markdown",
    "image",
] }
iced_runtime = "0.14.0"
iced_selection = "0.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.12.4"
glob = "0.3.3"

ignore = "0.4.26"
dunce = "1"
gh-emoji = "1.0.8"
ron = "0.12.2"
fontdb = "0.23"
iced_aw = { version = "0.14.1", features = ["tab_bar", "drop_down"] }
tinytemplate = "1.2.1"
shell-words = "1.1.1"
pulldown-cmark = "0.12"
interprocess = "2"
include_dir = "0.7.4"
rmcp = { version = "2", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "which-command",
] }
http = "1.4.2"
arrayvec = { version = "0.7.8" }
image = { version = "0.25.10", default-features = false, features = ["ico"] }

[build-dependencies]
winresource = "0.1.31"
